; ModuleID = '/home/carl/AnghaBench/jemalloc/test/src/extr_test.c_do_hook.c'
source_filename = "/home/carl/AnghaBench/jemalloc/test/src/extr_test.c_do_hook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NUM_REENTRANT_ALLOCS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, void (...)**)* @do_hook to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_hook(i32* %0, void (...)** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca void (...)**, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store void (...)** %1, void (...)*** %4, align 8
  %7 = load i32*, i32** %3, align 8
  store i32 1, i32* %7, align 4
  %8 = load void (...)**, void (...)*** %4, align 8
  store void (...)* null, void (...)** %8, align 8
  store i64 1, i64* %5, align 8
  store i32 0, i32* %6, align 4
  br label %9

9:                                                ; preds = %19, %2
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* @NUM_REENTRANT_ALLOCS, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %22

13:                                               ; preds = %9
  %14 = load i64, i64* %5, align 8
  %15 = call i32 @malloc(i64 %14)
  %16 = call i32 @free(i32 %15)
  %17 = load i64, i64* %5, align 8
  %18 = mul i64 %17, 2
  store i64 %18, i64* %5, align 8
  br label %19

19:                                               ; preds = %13
  %20 = load i32, i32* %6, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %6, align 4
  br label %9

22:                                               ; preds = %9
  ret void
}

declare dso_local i32 @free(i32) #1

declare dso_local i32 @malloc(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
